<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.deepamgoel.quiz20.level_one.LevelOneActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ques"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"
                android:fontFamily="@font/merriweather_regular"
                android:gravity="center"
                android:text="@string/que1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/twenty_four_sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ques"
                android:layout_margin="@dimen/eight_dp">

                <RadioButton
                    android:id="@+id/opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight_dp"
                    android:fontFamily="@font/merriweather_regular"
                    android:gravity="center"
                    android:text="@string/opt1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/twenty_sp" />

                <RadioButton
                    android:id="@+id/opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight_dp"
                    android:fontFamily="@font/merriweather_regular"
                    android:gravity="center"
                    android:text="@string/opt2"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/twenty_sp" />

                <RadioButton
                    android:id="@+id/opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight_dp"
                    android:fontFamily="@font/merriweather_regular"
                    android:gravity="center"
                    android:text="@string/opt3"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/twenty_sp" />

                <RadioButton
                    android:id="@+id/opt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight_dp"
                    android:fontFamily="@font/merriweather_regular"
                    android:gravity="center"
                    android:text="@string/opt4"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/twenty_sp" />

            </RadioGroup>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>